[metadata]
name = json-parser
summary = Simple tool to parse logs in json file and display it as a text log file
description_file =
    README.md
author = Slawek Kaplonski
author_email = slawek@kaplonski.pl
home_page = https://kaplonski.pl
python_requires = >=3.6
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[entry_points]
console_scripts =
    json-parser = json_parser.parser:main
